Create new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Fitness Counter</string>
     <string name="counterExercise">0</string>
+    <string name="buttonExercise">Упражнения</string>
 
 </resources>
